# powergym

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
Documentation/: API_QUICK_REFERENCE.md  FACE_RECOGNITION_API.md  FACE_RECOGNITION_README.md  IMPLEMENTATION_SUMMARY.md
alembic/: env.py
alembic/versions/: 1133cf41a836_create_trig_and_proc_for_inventory.py  37a5aad6f8ec_initial_migration.py  4fb806eddc5d_add_plans_subscriptions_and_payments.py  7b0bbe68686d_initial_migration.py  8c27a8605343_add_vectorial_indexes.py  d35eb63925cb_initial_migration.py
app/api/: dependencies.py
app/core/: async_processing.py  cache.py  compression.py  config.py  database.py  encryption.py  security.py  token_blacklist.py
app/db/: models.py  session.py
app/enums/: attendance.py
app/middleware/: compression.py  error_handler.py  logging.py  rate_limit.py
app/models/: attendance.py  biometric.py  client.py  client_dashboard.py  face_recognition.py  payment.py  plan.py  subscription.py  token.py  user.py
app/repositories/: attendance_repository.py  biometric_repository.py  client_repository.py  movement_repository.py  payment_repository.py  plan_repository.py  product_repository.py  subscription_repository.py  user_repository.py
app/schemas/: attendance.py  biometric.py  client.py  face_recognition.py  inventory.py  payment.py  subscription.py
app/services/: attendance_service.py  biometric_service.py  client_service.py  face_recognition_service.py  inventory_service.py  payment_service.py  plan_service.py  (+2 more)
init-scripts/: 01-init-pgvector.sql
(+38 files in other folders)
