[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocache>=0.12.3",
    "cryptography>=46.0.2",
    "face-recognition>=1.3.0",
    "face-recognition-models>=0.3.0",
    "fastapi>=0.118.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.3.0",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "setuptools<81.0.0",
    "slowapi>=0.1.9",
    "supabase>=2.21.1",
    "uvicorn[standard]>=0.37.0",
]
